--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
